# Devops-Pipeline-Project

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  mise.toml  release-please-config.json
.github/workflows/: backend-tests.yaml  frontend-tests.yaml
backend/: pyproject.toml
scripts/: setup_project
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/data/: sessions.csv
src/backend/src/backend/: main.py
src/demo/: Dockerfile
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
