[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "santiagobermudezparra", email = "santiago@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
study-tracker-api = "backend.main:main"


[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
