[project]
name = "study-tracker-backend"
version = "0.2.1"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "Santi", email = "santi@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
    "uvicorn>=0.35.0",
]

[project.scripts]
study-tracker-api = "backend.main:main"


[tool.hatch.build.targets.wheel]
packages = ["src/backend"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
